--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -782,7 +782,7 @@
       "chooseTime": "Izberite termin",
       "review": "Pregled",
       "service": "Storitev",
-      "doctor": "sl - Doctor",
+      "doctor": "Zdravnik",
       "time": "Čas",
       "price": "Cena",
       "taken": "Zasedeno",
@@ -806,12 +806,12 @@
       "confirm": "Potrdi",
       "dataConfirmed": "Podatki potrjeni",
       "confirmationOfBooking": "Potrditev rezervacije",
-      "firstName": "sl - First name",
-      "lastName": "sl - Last name",
-      "pleaseEnterYourMobileNumber": "sl - Please enter your mobile phone number so we can verify and confirm your booking",
+      "firstName": "Ime",
+      "lastName": "Priimek",
+      "pleaseEnterYourMobileNumber": "Prosimo vnesite svojo telefonsko številko, da lahko preverimo in potrdimo vaš termin.",
       "phoneNumber": "Telefonska številka",
       "phone": "Telefon",
-      "countryCode": "sl - Country code",
+      "countryCode": "Omrežna številka",
       "sendVerificationCode": "Pošlji potrditveno kodo",
       "theCodeHasBeenSentTo": "Koda je bila poslana na",
       "smsVerificationCode": "Sms potrditvena koda:",
@@ -819,8 +819,8 @@
       "confirmCode": "Potrdi kodo",
       "modifyPhoneNumber": "Spremeni telefonsko številko",
       "yourDetailsHaveBeenSuccessfullyVerified": "Vaši podatki so bili potrjeni. Veselimo se vašega obiska.",
-      "location": "sl - Location",
-      "company": "sl - Company"
+      "location": "Lokacija",
+      "company": "Podjetje"
     }
   }
 }
