fix: remove price from date and time slot, remove total price from summary

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -797,6 +797,7 @@
       "availableDoctors": "Available Doctors",
       "showMore": "Show more...",
       "totalInfo": "Total Info",
+      "summary": "Summary",
       "date": "Date",
       "total": "Total",
       "backToServices": "Back to Services",
@@ -806,7 +807,6 @@
       "at": "at",
       "startAt": "Start at",
       "slotsAndPrices": "Slots and Prices",
-      "doctor": "Doctor",
       "confirm": "Confirm",
       "dataConfirmed": "Data confirmed",
       "confirmationOfBooking": "Confirmation of booking",
