--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -794,6 +794,7 @@
       "availableDoctors": "Prosti zdravniki",
       "showMore": "Pokaži več",
       "totalInfo": "Popolni podatki",
+      "summary": "sl - Summary",
       "date": "Datum",
       "total": "Skupaj",
       "backToServices": "Nazaj na storitve",
