--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -133,7 +133,7 @@
     "changeColor": "Spremeni barvo",
     "labels": "Oznaka",
     "viewPatient": "Ogled pacienta",
-    "unknown": "Neznano",
+    "unknown": "Ni podatka",
     "attended": "Udeleženo",
     "notAttended": "Neudeleženo",
     "canceled": "Preklicano",
