--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -827,7 +827,11 @@
       "modifyPhoneNumber": "Modify phone number",
       "yourDetailsHaveBeenSuccessfullyVerified": "Your details have been successfully verified. We look forward to your visit.",
       "location": "Location",
-      "company": "Company"
+      "company": "Company",
+      "error": {
+        "over-order": "You can't book more than two appointments with same phone number.",
+        "unavailable-slot": "Your selected slot is already booked."
+      }
     }
   }
 }
