--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -16,7 +16,9 @@
     "search": "Search",
     "searchBy": "Search By",
     "sortBy": "Sort By",
-    "country": "Country"
+    "country": "Country",
+    "yes": "Yes",
+    "no": "No"
   },
   "documents": {
     "offers": "Offers",
@@ -155,6 +157,20 @@
     "requiredFields": "Fields marked with * have to be filled",
     "eventMoveBetweenResources": "Are you sure you want to move this appointment to another doctor?",
     "eventTimeChange": "Are you sure you want to change this event's time?"
+  },
+  "appointments": {
+    "header": "Appointments",
+    "filters": "Filters",
+    "time": "Time",
+    "patient": "Patient",
+    "product": "Product",
+    "doctor": "Doctor",
+    "attendance": "Attendance",
+    "interest": "Interest level",
+    "notInterested": "Not interested",
+    "interested": "Interested",
+    "veryInterested": "Very interested",
+    "enterNotes": "Enter notes..."
   },
   "patients": {
     "patientsHeader": "Patients",
