fix: further online booking localization

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -804,8 +804,9 @@
       "doctor": "Zobozdravnik",
       "time": "Čas",
       "price": "Cena",
-      "taken": "Zasedeno",
-      "closed": "Zaprto",
+      "open": "prosto",
+      "taken": "zasedeno",
+      "closed": "zaprto",
       "chooseYourFavoriteDoctor": "Izberite zdravnika",
       "selectOption": "Izberite možnost",
       "pressEnterToSelect": "Pritisnite enter, da izberete",
