--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -807,6 +807,7 @@
       "doctor": "Doctor",
       "time": "Time",
       "price": "Price",
+      "open": "open",
       "taken": "taken",
       "closed": "closed",
       "chooseYourFavoriteDoctor": "Choose your favorite doctor",
