--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -846,7 +846,9 @@
       "bookAnotherAppointment": "Rezerviraj nov termin",
       "error": {
         "over-order": "Ni možno zapolniti več kot dva termina iz iste telefonske številke.",
-        "unavailable-slot": "Vaš izbrani termin je že zaseden."
+        "unavailable-slot": "Vaš izbrani termin je že zaseden.",
+        "incorrect-code": "sl - The code inserted does not match the expected value.",
+        "excessive-verification-attempts": "sl - Incorrect code was entered too many times. Please wait to try again."
       }
     }
   }
