feat: add "min" to minutes

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -806,6 +806,7 @@
       "service": "Service",
       "doctor": "Doctor",
       "time": "Time",
+      "minutes": "min",
       "price": "Price",
       "open": "open",
       "taken": "taken",
