feat: note for clinic now in appointments, design fixes

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -170,6 +170,8 @@
     "notInterested": "Not interested",
     "interested": "Interested",
     "veryInterested": "Very interested",
+    "clinicNotes": "Clinic notes",
+    "callCenterNotes": "Call center notes",
     "enterNotes": "Enter notes..."
   },
   "patients": {
