feat: italian localization for online booking

--- a/SmartPRM-ClinicModule/src/locales/it.json
+++ b/SmartPRM-ClinicModule/src/locales/it.json
@@ -800,60 +800,58 @@
   },
   "public": {
     "onlineBooking": {
-      "pickService": "Pick service",
-      "chooseTime": "Choose time",
-      "review": "Review",
-      "service": "Service",
-      "doctor": "Doctor",
-      "time": "Time",
-      "price": "Price",
-      "open": "open",
-      "taken": "taken",
-      "closed": "closed",
-      "unavailable": "unavailable",
-      "chooseYourFavoriteDoctor": "Choose your favorite doctor",
-      "selectOption": "Select option",
-      "pressEnterToSelect": "Press enter to select",
-      "pressEnterToRemove": "Press enter to remove",
-      "availableDoctors": "Available Doctors",
-      "showMore": "Show more...",
-      "totalInfo": "Total Info",
-      "summary": "Summary",
-      "date": "Date",
-      "total": "Total",
-      "backToServices": "Back to Services",
-      "toReview": "To review",
-      "checkSelectedSlotAndConfirmReservation": "Check selected slot and confirm reservation.",
-      "selectedSlot": "Selected slot",
-      "at": "at",
-      "startAt": "Start at",
-      "slotsAndPrices": "Slots and Prices",
-      "confirm": "Confirm",
-      "dataConfirmed": "Data confirmed",
-      "confirmationOfBooking": "Confirmation of booking",
-      "firstName": "First name",
-      "lastName": "Last name",
-      "pleaseEnterYourMobileNumber": "Please enter your mobile phone number so we can verify and confirm your booking",
-      "phoneNumber": "Phone number",
-      "phone": "Phone",
-      "countryCode": "Country code",
-      "sendVerificationCode": "Send verification code",
-      "theCodeHasBeenSentTo": "The code has been sent to",
-      "smsVerificationCode": "Sms verification code:",
-      "confirmationCode": "Confirmation code",
-      "confirmCode": "Confirm code",
-      "modifyPhoneNumber": "Modify phone number",
-      "yourDetailsHaveBeenSuccessfullyVerified": "Your details have been successfully verified. We look forward to your visit.",
-      "location": "Location",
-      "company": "Company",
-      "bookingSuccessful": "You have successfully booked an appointment!",
-      "bookAnotherAppointment": "Book another appointment",
+      "pickService": "Seleziona un servizio",
+      "chooseTime": "Seleziona l'orario",
+      "review": "Revisione",
+      "service": "Servizio",
+      "doctor": "Dentista",
+      "time": "Orario",
+      "price": "Prezzo",
+      "open": "Libero",
+      "taken": "Occupato",
+      "closed": "Chiuso",
+      "chooseYourFavoriteDoctor": "Scegli dentista",
+      "selectOption": "Seleziona opzione",
+      "pressEnterToSelect": "Premi invio per selezionare",
+      "pressEnterToRemove": "Premi invio per cancellare",
+      "availableDoctors": "Dentisti liberi",
+      "showMore": "Mostra altro",
+      "totalInfo": "Dati completi",
+      "summary": "Riepilogo",
+      "date": "Data",
+      "total": "Totale",
+      "backToServices": "Torna ai servizi",
+      "toReview": "Conferma data",
+      "checkSelectedSlotAndConfirmReservation": "Verifica le date selezionate e conferma la prenotazione.",
+      "selectedSlot": "Data selezionata",
+      "at": "alle",
+      "startAt": "Inizio alle",
+      "slotsAndPrices": "Date e prezzi",
+      "confirm": "Conferma",
+      "dataConfirmed": "Dati confermati",
+      "confirmationOfBooking": "Conferma la prenotazione",
+      "firstName": "Nome",
+      "lastName": "Cognome",
+      "pleaseEnterYourMobileNumber": "Inserisci il tuo numero di telefono per ricevere il codice per la conferma dell'appuntamento.",
+      "phoneNumber": "Numero di telefono",
+      "phone": "Telefono",
+      "countryCode": "Prefisso internazionale",
+      "sendVerificationCode": "Manda il codice di verifica",
+      "theCodeHasBeenSentTo": "Il codice è stato inviato a",
+      "smsVerificationCode": "Codice di verifica sms:",
+      "confirmationCode": "Codice di conferma",
+      "confirmCode": "Conferma il codice",
+      "modifyPhoneNumber": "Modifica il numero di telefono",
+      "yourDetailsHaveBeenSuccessfullyVerified": "I tuoi dati sono stati confermati. Ti aspettiamo all'appuntamento.",
+      "location": "Località",
+      "company": "Ditta",
+      "bookingSuccessful": "Il tuo appuntamento è confermato!",
+      "bookAnotherAppointment": "Prenota un nuvo appuntamento",
       "error": {
-        "over-order": "You can't book more than two appointments with same phone number.",
-        "unavailable-slot": "Your selected slot is already booked.",
-        "incorrect-code": "The code inserted does not match the expected value.",
-        "excessive-verification-attempts": "Incorrect code was entered too many times. Please wait to try again."
+        "over-order": "Non è possibile fare due prenotazioni con lo stesso numero di telefono.",
+        "unavailable-slot": "La data scelta è già occupata."
       }
     }
+
   }
 }
