fix: free slots localization fix

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -19,7 +19,9 @@
     "country": "Country",
     "yes": "Yes",
     "no": "No",
-    "noDoctor": "Doctor not assigned"
+    "noDoctor": "Doctor not assigned",
+    "cancel": "Cancel",
+    "confirm": "Confirm"
   },
   "documents": {
     "offers": "Offers",
