feat: online booking localization finished

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -830,8 +830,8 @@
       "summary": "Summary",
       "date": "Date",
       "total": "Total",
-      "backToServices": "Back to Services",
-      "toReview": "To review",
+      "back": "Back",
+      "continue": "Continue",
       "checkSelectedSlotAndConfirmReservation": "Check selected slot and confirm reservation.",
       "selectedSlot": "Selected slot",
       "at": "at",
