--- a/SmartPRM-ClinicModule/src/locales/it.json
+++ b/SmartPRM-ClinicModule/src/locales/it.json
@@ -820,8 +820,8 @@
       "summary": "Riepilogo",
       "date": "Data",
       "total": "Totale",
-      "backToServices": "Torna ai servizi",
-      "toReview": "Conferma data",
+      "back": "Indietro",
+      "continue": "Avanti",
       "checkSelectedSlotAndConfirmReservation": "Verifica le date selezionate e conferma la prenotazione.",
       "selectedSlot": "Data selezionata",
       "at": "alle",
