--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -829,8 +829,8 @@
       "summary": "Povzetek",
       "date": "Datum",
       "total": "Skupaj",
-      "backToServices": "Nazaj na storitve",
-      "toReview": "Potrdi datum",
+      "back": "Nazaj",
+      "continue": "Naprej",
       "checkSelectedSlotAndConfirmReservation": "Obkljukajte izbrane termine in potrdite rezervacijo.",
       "selectedSlot": "Izbran termin",
       "at": "ob",
