--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -644,6 +644,7 @@
     "addLocation": "New location",
     "locationsColumn": {
       "name": "Name",
+      "locationName": "Location name",
       "address": "Address",
       "city": "City",
       "action": "Action"
@@ -651,6 +652,7 @@
     "addLocationModalHeader": "New location",
     "editLocationModalHeader": "Edit location",
     "locationModal": {
+      "clinic": "Premise",
       "name": "Name",
       "city": "City",
       "address": "Address",
