--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -55,6 +55,7 @@
   },
   "settings": {
     "users": "Users",
+    "general": "General",
     "locations": "Locations",
     "services and products": "Services and Products",
     "invoicing": "Invoicing",
