--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -48,6 +48,7 @@
     "missingServices": "Manjkajoče storitve"
   },
   "settings": {
+    "general": "Splošno",
     "users": "Uporabniki",
     "locations": "Lokacije",
     "services and products": "Storitve in Izdelki",
